[package]
name = "cef-sys"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
lazy_static = "1.3"
libc = "0.2"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
bindgen = "0.51"
